[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Font/LiberationSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/GFX/KenneyGameUI/PNG/red_panel.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://Animations/fade_out.anim" type="Animation" id=4]
[ext_resource path="res://Animations/fade_in.anim" type="Animation" id=5]
[ext_resource path="res://Assets/GFX/KenneyGameUI/PNG/White/1x/cross.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/KenneyGameUI/PNG/White/1x/save.png" type="Texture" id=7]
[ext_resource path="res://Assets/GFX/KenneyGameUI/PNG/White/1x/checkmark.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0.909804, 0.290196, 0.00392157, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0.909804, 0.290196, 0.00392157, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 1
outline_color = Color( 0.909804, 0.290196, 0.00392157, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.505882, 0.192157, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MainContainer"]
margin_left = 139.0
margin_top = 109.0
margin_right = 1139.0
margin_bottom = 609.0
rect_min_size = Vector2( 1000, 500 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 997.0
margin_bottom = 67.0
size_flags_vertical = 0

[node name="SoundMusicLabel" type="Label" parent="MainContainer/PanelContainer/VBoxContainer"]
margin_right = 994.0
margin_bottom = 41.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.415686, 0.0784314, 0, 1 )
text = "SOUND / MUSIC"
align = 1
valign = 1

[node name="SoundContainer" type="HBoxContainer" parent="MainContainer/PanelContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 994.0
margin_bottom = 64.0
size_flags_vertical = 4
alignment = 1

[node name="SoundVolumeLable" type="Label" parent="MainContainer/PanelContainer/VBoxContainer/SoundContainer"]
margin_left = 340.0
margin_right = 450.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.415686, 0.0784314, 0, 1 )
text = "Sound Volume:"
align = 1
valign = 1

[node name="SoundSlider" type="HSlider" parent="MainContainer/PanelContainer/VBoxContainer/SoundContainer"]
margin_left = 453.0
margin_top = 1.0
margin_right = 653.0
margin_bottom = 17.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = -50.0
max_value = 0.0

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -95.0
margin_right = 79.0
margin_bottom = -45.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="TextureButton" parent="ButtonContainer"]
self_modulate = Color( 0.909804, 0.415686, 0.0901961, 1 )
margin_right = 50.0
margin_bottom = 50.0
hint_tooltip = "Apply"
texture_normal = ExtResource( 7 )

[node name="OkayButton" type="TextureButton" parent="ButtonContainer"]
self_modulate = Color( 0.909804, 0.415686, 0.0901961, 1 )
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
hint_tooltip = "OK"
texture_normal = ExtResource( 8 )

[node name="CancelButton" type="TextureButton" parent="ButtonContainer"]
self_modulate = Color( 0.909804, 0.415686, 0.0901961, 1 )
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
hint_tooltip = "Cancel"
texture_normal = ExtResource( 6 )

[node name="SettingsLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -119.5
margin_top = 45.0
margin_right = 119.5
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.415686, 0.0784314, 0, 1 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = ExtResource( 5 )
anims/fade_out = ExtResource( 4 )
[connection signal="value_changed" from="MainContainer/PanelContainer/VBoxContainer/SoundContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="pressed" from="ButtonContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="ButtonContainer/OkayButton" to="." method="_on_OkayButton_pressed"]
[connection signal="pressed" from="ButtonContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
